internal/gatewayapi/testdata/listenerset-protocol-conflict.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-with-listenerset-protocol-conflict
    namespace: gateway-conformance-infra
  spec:
    allowedListeners:
      namespaces:
        from: Same
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: gateway-listener.com
      name: gateway-listener
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: protocol-conflict-with-gateway-listener.com
      name: protocol-conflict-with-gateway-listener
      port: 80
      protocol: HTTP
  status:
    attachedListenerSets: 3
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: gateway-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: protocol-conflict-with-gateway-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
infraIR:
  gateway-conformance-infra/gateway-with-listenerset-protocol-conflict:
    proxy:
      listeners:
      - name: gateway-conformance-infra/gateway-with-listenerset-protocol-conflict/gateway-listener
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      - name: gateway-conformance-infra/gateway-with-listenerset-protocol-conflict/gateway-conformance-infra/listenerset-invalid-first-should-not-block-valid/valid-http-after-invalid
        ports:
        - containerPort: 10081
          name: http-81
          protocol: HTTP
          servicePort: 81
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-with-listenerset-protocol-conflict
          gateway.envoyproxy.io/owning-gateway-namespace: gateway-conformance-infra
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: gateway-conformance-infra/gateway-with-listenerset-protocol-conflict
      namespace: envoy-gateway-system
listenerSets:
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: listenerset-with-protocol-conflict-with-gateway-1
    namespace: gateway-conformance-infra
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: listener-set-1-listener.com
      name: listener-set-1-listener
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: protocol-conflict-with-gateway-listener
      port: 80
      protocol: TCP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: protocol-conflict-with-listener-set-listener.com
      name: protocol-conflict-with-listener-set-listener
      port: 80
      protocol: HTTP
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-with-listenerset-protocol-conflict
      namespace: gateway-conformance-infra
  status:
    conditions:
    - lastTransitionTime: null
      message: Some listeners are invalid
      reason: ListenersNotValid
      status: "True"
      type: Accepted
    - lastTransitionTime: null
      message: Some listeners are not programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: listener-set-1-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "True"
        type: Conflicted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: protocol-conflict-with-gateway-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: protocol-conflict-with-listener-set-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: listenerset-with-protocol-conflict-with-gateway-2
    namespace: gateway-conformance-infra
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: protocol-conflict-with-gateway-listener
      port: 80
      protocol: TCP
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-with-listenerset-protocol-conflict
      namespace: gateway-conformance-infra
  status:
    conditions:
    - lastTransitionTime: null
      message: No listeners are accepted
      reason: ListenersNotValid
      status: "False"
      type: Accepted
    - lastTransitionTime: null
      message: No listeners are programmed
      reason: ListenersNotValid
      status: "False"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Only one TCP listener is allowed in a given port
        reason: ProtocolConflict
        status: "True"
        type: Conflicted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: protocol-conflict-with-gateway-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: listenerset-with-protocol-conflict-with-listener-set-1
    namespace: gateway-conformance-infra
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: listener-set-2-listener.com
      name: listener-set-2-listener
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: protocol-conflict-with-listener-set-listener
      port: 80
      protocol: TCP
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-with-listenerset-protocol-conflict
      namespace: gateway-conformance-infra
  status:
    conditions:
    - lastTransitionTime: null
      message: Some listeners are invalid
      reason: ListenersNotValid
      status: "True"
      type: Accepted
    - lastTransitionTime: null
      message: Some listeners are not programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: listener-set-2-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Only one TCP listener is allowed in a given port
        reason: ProtocolConflict
        status: "True"
        type: Conflicted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: protocol-conflict-with-listener-set-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: listenerset-with-protocol-conflict-with-listener-set-2
    namespace: gateway-conformance-infra
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: protocol-conflict-with-listener-set-listener
      port: 80
      protocol: TCP
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-with-listenerset-protocol-conflict
      namespace: gateway-conformance-infra
  status:
    conditions:
    - lastTransitionTime: null
      message: No listeners are accepted
      reason: ListenersNotValid
      status: "False"
      type: Accepted
    - lastTransitionTime: null
      message: No listeners are programmed
      reason: ListenersNotValid
      status: "False"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Only one TCP listener is allowed in a given port
        reason: ProtocolConflict
        status: "True"
        type: Conflicted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: protocol-conflict-with-listener-set-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: listenerset-with-internal-protocol-conflict
    namespace: gateway-conformance-infra
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: internal-conflict-http.com
      name: internal-conflict-http
      port: 82
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: internal-conflict-tcp
      port: 82
      protocol: TCP
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-with-listenerset-protocol-conflict
      namespace: gateway-conformance-infra
  status:
    conditions:
    - lastTransitionTime: null
      message: No listeners are accepted
      reason: ListenersNotValid
      status: "False"
      type: Accepted
    - lastTransitionTime: null
      message: No listeners are programmed
      reason: ListenersNotValid
      status: "False"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "True"
        type: Conflicted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: internal-conflict-http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "True"
        type: Conflicted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: internal-conflict-tcp
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: listenerset-invalid-first-should-not-block-valid
    namespace: gateway-conformance-infra
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: invalid-unsupported-protocol-first
      port: 81
      protocol: SCTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: valid-http-after-invalid.com
      name: valid-http-after-invalid
      port: 81
      protocol: HTTP
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-with-listenerset-protocol-conflict
      namespace: gateway-conformance-infra
  status:
    conditions:
    - lastTransitionTime: null
      message: Some listeners are invalid
      reason: ListenersNotValid
      status: "True"
      type: Accepted
    - lastTransitionTime: null
      message: Some listeners are not programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Protocol SCTP is unsupported, must be HTTP, HTTPS, TCP or UDP.
        reason: UnsupportedProtocol
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: Listener is invalid, see other Conditions for details.
        reason: ListenersNotValid
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: invalid-unsupported-protocol-first
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: valid-http-after-invalid
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
xdsIR:
  gateway-conformance-infra/gateway-with-listenerset-protocol-conflict:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-gateway-conformance-infra-gateway-with-listeners-eaf6e342
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: gateway-conformance-infra/gateway-with-listenerset-protocol-conflict
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-gateway-conformance-infra-gateway-with-listeners-eaf6e342
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: gateway-conformance-infra/gateway-with-listenerset-protocol-conflict
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - gateway-listener.com
      metadata:
        kind: Gateway
        name: gateway-with-listenerset-protocol-conflict
        namespace: gateway-conformance-infra
        sectionName: gateway-listener
      name: gateway-conformance-infra/gateway-with-listenerset-protocol-conflict/gateway-listener
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - protocol-conflict-with-gateway-listener.com
      metadata:
        kind: Gateway
        name: gateway-with-listenerset-protocol-conflict
        namespace: gateway-conformance-infra
        sectionName: protocol-conflict-with-gateway-listener
      name: gateway-conformance-infra/gateway-with-listenerset-protocol-conflict/protocol-conflict-with-gateway-listener
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - listener-set-1-listener.com
      metadata:
        kind: Gateway
        name: gateway-with-listenerset-protocol-conflict
        namespace: gateway-conformance-infra
        sectionName: listener-set-1-listener
      name: gateway-conformance-infra/gateway-with-listenerset-protocol-conflict/gateway-conformance-infra/listenerset-with-protocol-conflict-with-gateway-1/listener-set-1-listener
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - protocol-conflict-with-listener-set-listener.com
      metadata:
        kind: Gateway
        name: gateway-with-listenerset-protocol-conflict
        namespace: gateway-conformance-infra
        sectionName: protocol-conflict-with-listener-set-listener
      name: gateway-conformance-infra/gateway-with-listenerset-protocol-conflict/gateway-conformance-infra/listenerset-with-protocol-conflict-with-gateway-1/protocol-conflict-with-listener-set-listener
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - listener-set-2-listener.com
      metadata:
        kind: Gateway
        name: gateway-with-listenerset-protocol-conflict
        namespace: gateway-conformance-infra
        sectionName: listener-set-2-listener
      name: gateway-conformance-infra/gateway-with-listenerset-protocol-conflict/gateway-conformance-infra/listenerset-with-protocol-conflict-with-listener-set-1/listener-set-2-listener
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    - address: 0.0.0.0
      externalPort: 81
      hostnames:
      - valid-http-after-invalid.com
      metadata:
        kind: Gateway
        name: gateway-with-listenerset-protocol-conflict
        namespace: gateway-conformance-infra
        sectionName: valid-http-after-invalid
      name: gateway-conformance-infra/gateway-with-listenerset-protocol-conflict/gateway-conformance-infra/listenerset-invalid-first-should-not-block-valid/valid-http-after-invalid
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10081
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
